# InferQ

./: .dvcignore  .envrc  .gitignore  AZURE_TABLES_GUIDE.md  LOGGING_SUMMARY.md  MANIFEST.parquet  Readme.md  SETUP_README.md  UPLOAD_CIRCUITS_README.md  activate_env.sh  circuits.dvc  config.py  config_hpc.py  extract.py  force_cleanup_restart.sh  generation_examples.py  list_azure_circuits.py  load_azure_env.sh  main.py  main_parallel.py  monitor_hpc.py  pyproject.toml  requirements.in  requirements.txt  requirements_hpc.txt  run_hpc_macos.sh  scratch.txt.dvc  setup_with_uv.sh  simple_test.py  submit_delftblue.sh  submit_delftblue_test.sh  test_azure_upload_connection.py  test_circuit_merger.py  upload_circuits_to_azure.py  upload_to_azure.sh
.dvc/: config
analysis/: analysis.ipynb  circuits_data.csv  cleaning.ipynb  dist.ipynb  dynamic.ipynb  estimator.ipynb  export_table.py  final_rdbms_analysis.ipynb  rdbms.ipynb  selector.ipynb  utils.py
feature_extractors/: dynamic_features.py  extractors.py  graph_features.py  graphs.py  main.py  static_features.py
generator/: __init__.py  build_ghz.py  effu2.py  realampan_rand.py  two_local_rand.py  wstate.py
generator/algorithms/: qnn.py  qpe.py  qwalk
generators/: __init__.py  circuit_merger.py  effu2.py  ghz.py  graph_state.py  qft.py  qft_entangled.py  random.py  random_circuit.py  realamp_ansatz_rand.py  realampan_rand.py  two_local_rand.py  wstate.py
generators/algorithms/: amplitude_estimation.py  deutsch_jozsa.py  grover_no_ancilla.py  grover_v_chain.py  qaoa.py  qft.py  qft_entangled.py  qnn.py  qpe.py  qwalk.py  vqe.py
generators/algorithms/amplitude_estimation/: amplitude_estimation.py  amplitude_estimation_class.py
generators/algorithms/deutsch_jozsa/: deutsch_jozsa.py  deutsch_jozsa_class.py
generators/algorithms/grover_no_ancilla/: grover_no_ancilla.py  grover_no_ancilla_class.py
generators/algorithms/grover_v_chain/: grover_v_chain.py  grover_v_chain_class.py
generators/lib/: generator.py  parameters.py
generators/state_prep_circuits/: random_circuit.py  realamp_ansatz_rand.py  two_local_rand.py  wstate.py
inferq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline/: __init__.py  azure_manager.py  manager.py  system_utils.py  worker.py
scripts/: README.md  azure_check.sh  download_circuits.py  fetch_all_blobs.py  fetch_circuits.py  pipeline_monitor.sh  rerun_simulations.py  rerun_simulations_parallel.py  run_light.sh  run_parallel.sh  system_info.sh  upload_circuits_to_azure.py  upload_to_azure.sh
scripts/legacy/: run_hpc.sh
simulators/: __init__.py  simulate.py  simulation_utils.py  test_simulators.py
test-env-scripts/: 01_test_python.py  02_test_packages.py  03_test_azure.py  04_test_system.py  05_test_pipeline.py  README.md  run_all_tests.sh  setup_azure_env.sh
tests/: test_modular_storage.py
tests/generators/: test_circuit_merger_synergies.py
utils/: azure_connection.py  blob_storage.py  build_manifest.py  checkpoint_writer.py  circuit_hash.py  duplicate_detector.py  feature_extractors.py  features_const.py  local_storage.py  manifest_tools.py  save_utils.py  sql_storage.py  sync_manifest.py  table_storage.py  test_table_connection.py
