[project]
name = "inferq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adlfs==2024.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.3.2",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "appdirs==1.4.4",
    "argcomplete==3.6.2",
    "asyncssh==2.21.0",
    "atpublic==6.0.1",
    "attrs==25.3.0",
    "azure-core==1.34.0",
    "azure-data-tables>=12.7.0",
    "azure-datalake-store==0.0.53",
    "azure-identity==1.23.0",
    "azure-storage-blob==12.25.1",
    "billiard==4.2.1",
    "celery==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "configobj==5.0.9",
    "cryptography==45.0.2",
    "dictdiffer==0.9.0",
    "dill==0.4.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "dpath==2.2.0",
    "dulwich==0.22.8",
    "entrypoints==0.4",
    "filelock==3.18.0",
    "flatten-dict==0.4.2",
    "flufl-lock==8.2.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "funcy==2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "grandalf==0.8",
    "gto==1.7.2",
    "hydra-core==1.3.2",
    "idna==3.10",
    "ipykernel>=6.29.5",
    "isodate==0.7.2",
    "iterative-telemetry==0.0.10",
    "jmespath==1.0.1",
    "knack==0.12.0",
    "kombu==5.5.3",
    "markdown-it-py==3.0.0",
    "matplotlib>=3.10.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msal==1.32.3",
    "msal-extensions==1.3.1",
    "multidict==6.4.3",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "omegaconf==2.3.0",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pbr==6.1.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydot==4.0.0",
    "pygments==2.19.1",
    "pygtrie==2.5.0",
    "pyjwt==2.10.1",
    "pylatexenc>=2.10",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "qiskit==2.0.1",
    "qiskit-aer==0.17.0",
    "qiskit-aer-gpu; sys_platform == 'linux'",
    "requests==2.32.3",
    "retworkx==0.16.0",
    "rich==14.0.0",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "rustworkx==0.16.0",
    "scipy==1.15.3",
    "scmrepo==3.3.11",
    "semver==3.0.4",
    "setuptools==80.7.1",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sqltrie==0.11.2",
    "stevedore==5.4.1",
    "symengine==0.13.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "wcwidth==0.2.13",
    "yarl==1.20.0",
    "zc-lockfile==3.0.post1",
]

[tool.setuptools.packages.find]
include = ["generators*", "feature_extractors*", "utils*"]
exclude = ["tests*", "circuits*"]

[tool.setuptools]
package-dir = {"" = "."}
